force-app/main/default/objects/Product2/fields/ANZ_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Product_Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>