force-app/main/default/objects/Product2/fields/ANZ_Product_Code_Num__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Product_Code_Num__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The numeric value of ANZ_Product_Code to facilitate a numeric sort</description>
    <formula>VALUE(ANZ_Product_Code__c)</formula>
    <label>Code Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>