force-app/main/default/objects/Product2/fields/Business_area__c.field-meta.xml
<CustomField>
    <fullName>Business_area__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is to defined segments of commercial banking</description>
    <label>Business area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small_to_Medium_Enterprise_Banking</fullName>
                <label>Small to Medium Enterprise Banking (SME)</label>
            </value>
            <value>
                <fullName>Diversified_and_Specialist_Industries</fullName>
                <label>Diversified and Specialist Industries (DSI)</label>
            </value>
            <value>
                <fullName>Commercial_Broker_and_Origination</fullName>
                <label>Commercial Broker and Origination (CB&amp;O)</label>
            </value>
            <value>
                <fullName>ANZ_Private</fullName>
                <label>ANZ Private</label>
            </value>
            <value>
                <fullName>Transaction_Banking</fullName>
                <label>Transaction Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>