force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This is to define product category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ_Business_Loan</fullName>
                <label>ANZ Business Loan (ABL)</label>
            </value>
            <value>
                <fullName>Asset_Finance</fullName>
                <label>Asset Finance</label>
            </value>
            <value>
                <fullName>Commercial_Bill</fullName>
                <label>Commercial Bill</label>
            </value>
            <value>
                <fullName>Commercial_Cards</fullName>
                <label>Commercial Cards</label>
            </value>
            <value>
                <fullName>Consumer_Credit_Card</fullName>
                <label>Consumer Credit Card</label>
            </value>
            <value>
                <fullName>Consumer_Overdrafts</fullName>
                <label>Consumer Overdrafts</label>
            </value>
            <value>
                <fullName>DDA_Overdraft</fullName>
                <label>DDA/Overdraft</label>
            </value>
            <value>
                <fullName>Home_Equity_Loans</fullName>
                <label>Home Equity Loans</label>
            </value>
            <value>
                <fullName>Home_Loans</fullName>
                <label>Home Loans</label>
            </value>
            <value>
                <fullName>Indemnity_Guarantee</fullName>
                <label>Indemnity Guarantee</label>
            </value>
            <value>
                <fullName>Investment_Loans</fullName>
                <label>Investment Loans</label>
            </value>
            <value>
                <fullName>Markets</fullName>
            </value>
            <value>
                <fullName>Other_Products</fullName>
                <label>Other Products</label>
            </value>
            <value>
                <fullName>Personal_Loans</fullName>
                <label>Personal Loans</label>
            </value>
            <value>
                <fullName>Tailored_Commercial_Facility</fullName>
                <label>Tailored Commercial Facility</label>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Full_Lending_List</fullName>
                <label>Full Lending List</label>
            </value>
            <value>
                <fullName>Term_Deposit</fullName>
                <label>Term Deposit</label>
            </value>
            <value>
                <fullName>ANZ_Business_Notice_Term_Deposit</fullName>
                <label>ANZ Business Notice Term Deposit</label>
            </value>
            <value>
                <fullName>Transaction_Account</fullName>
                <label>Transaction Account</label>
            </value>
            <value>
                <fullName>ANZ_Plus</fullName>
                <label>ANZ Plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>