force-app/main/default/objects/Product2/fields/IDR_Allow_Account_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>IDR_Allow_Account_Policy_Number__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>this checkbox is created for admin to select products that allows Account/Policy number to be N/A</description>
    <inlineHelpText>Select this for products that allows Account/Policy number to be N/A</inlineHelpText>
    <label>Allow NA as Account/Policy Number</label>
    <type>Checkbox</type>
</CustomField>