force-app/main/default/objects/Product2/fields/IDR_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>IDR_Product_Family__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Product family , used to identify the workbasket for a complaint that has this product.</description>
    <label>Product Family</label>
    <referenceTo>Product_Family__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>