force-app/main/default/objects/Product2/fields/IDR_Product_or_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>IDR_Product_or_Service_Category__c</fullName>
    <description>The broad category of product or service that the complaint is about. Keys and values match ASIC specifications (refer to ASIC&apos;s &quot;Internal dispute resolution data dictionary&quot; PDF)</description>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <label>Product or Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Product_or_Service_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Business finance</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Consumer credit</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Guarantees</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Margin loans</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Current accounts</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Safe custody</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Savings account</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Domestic insurance</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Extended warranty</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Professional indemnity</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Small business and farm insurance</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Derivatives and hedging</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Managed investments</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Real property</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Securities</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Superannuation – Non-trustee related</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Income stream risk</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Non-income stream risk</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Direct transfer</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Non-cash</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Estate management and planning</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Annuity policy</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Approved deposit fund</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Corporate fund</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Industry fund</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Life policy fund</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Public sector fund</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Retail fund</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Retirement savings account</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Small APRA fund</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>