force-app/main/default/objects/Product2/fields/IDR_Product_or_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>IDR_Product_or_Service_Line__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>The financial sector for the product or service category that the complaint is about.

Keys and values match ASIC specifications (refer to ASIC&apos;s &quot;Internal dispute resolution data dictionary&quot; PDF)</description>
    <label>Product or Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Credit</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Deposit taking</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>General insurance</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Investments</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Life insurance</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Payment systems</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Traditional trustee services</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Superannuation</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Financial advice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>