force-app/main/default/objects/Product2/fields/IDR_Product_or_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>IDR_Product_or_Service_Type__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <description>The individual product or service that the complaint is about.</description>
    <label>Product or Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Product_or_Service_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Business credit card</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Business Loans</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Commercial bills</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Hire purchase/lease (Business finance)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Letter of credit</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Line of credit/overdraft</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Non-financial services provider debt</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Construction loans</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Credit cards</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Debt management/ credit repair</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Equity release</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Hire purchase/lease (Consumer credit)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Home loans</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Interest free finance</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Investment property loans</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Line of credit/ overdraft</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Non-financial firm debt</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Personal loans</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Short-term finance</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Bank guarantee</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Business guarantee</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Consumer guarantee</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Margin loans</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Business transaction accounts</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Foreign currency accounts</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Mortgage offset accounts</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Passbook accounts</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Personal transaction accounts</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Safe custody</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Bank bills</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>