force-app/main/default/objects/Product2/fields/Is_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Is_Portfolio__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>This shows Market Rate on the Opportunity product list</description>
    <label>Is Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>