force-app/main/default/objects/Product2/fields/Is_Retail_Classic_Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Retail_Classic_Loan_Product__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Identifies the product as classic.</description>
    <label>Is Retail Classic Loan Product</label>
    <type>Checkbox</type>
</CustomField>