force-app/main/default/objects/Product2/fields/OCV_Sub_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>OCV_Sub_Product_Key__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Used to uniquely identify a product record. Will have the below format

&quot;CAP-CIS:&quot;&lt;productcode&gt;&lt;subproduct code&gt;</description>
    <externalId>true</externalId>
    <label>OCV Sub Product Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>