force-app/main/default/objects/Product2/fields/Product_Abridged_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Abridged_Name__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate;Source - Salesforce</complianceGroup>
    <description>Short name for the product</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Short name for the product</inlineHelpText>
    <label>Product Abridged Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>