force-app/main/default/objects/Product2/fields/Product_Classification__c.field-meta.xml
<CustomField>
    <fullName>Product_Classification__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <label>Product Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>