force-app/main/default/objects/Product2/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Zafin</complianceGroup>
    <description>Provides the one or more features for the product.</description>
    <label>Product Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEATURE_TYPE_CARD_ACCESS</fullName>
                <label>Card Access</label>
            </value>
            <value>
                <fullName>FEATURE_TYPE_OFFSET</fullName>
                <label>Offset</label>
            </value>
            <value>
                <fullName>FEATURE_TYPE_DEPOSIT_RATE</fullName>
                <label>Deposit Rate</label>
            </value>
            <value>
                <fullName>FEATURE_TYPE_MORTGAGE_RATE</fullName>
                <label>Mortgage Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>