force-app/main/default/objects/Product2/fields/Product_Origination_System__c.field-meta.xml
<CustomField>
    <fullName>Product_Origination_System__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This is the product source system</description>
    <label>Product Origination System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>AMBIT</fullName>
            </value>
            <value>
                <fullName>LoanIQ</fullName>
            </value>
            <value>
                <fullName>Vision+</fullName>
            </value>
            <value>
                <fullName>CBIG</fullName>
            </value>
            <value>
                <fullName>CACHE/ORION</fullName>
            </value>
            <value>
                <fullName>Trade_360</fullName>
                <label>Trade 360</label>
            </value>
            <value>
                <fullName>MIDANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>