force-app/main/default/objects/Product2/fields/Product_Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Zafin</complianceGroup>
    <description>To identify if the product is part of Retail segment or Commercial Segment</description>
    <label>Product Segment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCT_SEGMENT_TYPE_COMMERCIAL</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>PRODUCT_SEGMENT_TYPE_RETAIL</fullName>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>