force-app/main/default/objects/Product2/fields/Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information</complianceGroup>
    <label>Product Start Date</label>
    <type>Date</type>
</CustomField>