force-app/main/default/objects/Product2/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - GCP</complianceGroup>
    <description>Values will be populated by GCP from the integration</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>