force-app/main/default/objects/Product2/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Sub Product Code of the Product</description>
    <label>Sub Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>