force-app/main/default/objects/Product2/recordTypes/ANZ_Product_or_Service.recordType-meta.xml
<RecordType>
    <fullName>ANZ_Product_or_Service</fullName>
    <active>true</active>
    <label>ANZ Product or Service</label>
</RecordType>