force-app/main/default/objects/Product2/recordTypes/CRM_ANZ_Product.recordType-meta.xml
<RecordType>
    <fullName>CRM_ANZ_Product</fullName>
    <active>true</active>
    <label>CRM ANZ Product</label>
</RecordType>