force-app/main/default/objects/Product2/validationRules/CCRM_NonCRMProductPrevent.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_NonCRMProductPrevent</fullName>
    <active>true</active>
    <description>Restrict CRM Business Admin user to modify other record type</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName != &apos;CRM_ANZ_Product&apos;,
$UserRole.DeveloperName = &apos;Commercial_Admin&apos;
)</errorConditionFormula>
    <errorMessage>Business Admin is allowed to update only CRM Products</errorMessage>
</ValidationRule>