force-app/main/default/objects/Product2/validationRules/CCRM_OCVProductKeyMandatoryOnSave.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_OCVProductKeyMandatoryOnSave</fullName>
    <active>true</active>
    <description>OCV Sub Product Key should not be empty</description>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp;
$Permission.CCRM_Skip_Validation = false &amp;&amp;
RecordType.DeveloperName = &apos;CRM_ANZ_Product&apos; &amp;&amp;
ISBLANK(OCV_Sub_Product_Key__c)</errorConditionFormula>
    <errorDisplayField>OCV_Sub_Product_Key__c</errorDisplayField>
    <errorMessage>OCV Sub Product Key should not be empty</errorMessage>
</ValidationRule>