force-app/main/default/objects/Product2/listViews/All_Active_ANZ_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_ANZ_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>IDR_Product_or_Service_Line__c</columns>
    <columns>IDR_Product_or_Service_Category__c</columns>
    <columns>IDR_Product_or_Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.ANZ_Product_or_Service</value>
    </filters>
    <label>All Active ANZ Products</label>
    <sharedTo>
        <roleAndSubordinates>ANZ</roleAndSubordinates>
    </sharedTo>
</ListView>