force-app/main/default/objects/Product2/listViews/All_CRM_Products.listView-meta.xml
<ListView>
    <fullName>All_CRM_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Sub_Product_Code__c</columns>
    <columns>OCV_Sub_Product_Key__c</columns>
    <columns>Category__c</columns>
    <columns>Business_area__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Origination_System__c</columns>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.CRM_ANZ_Product</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All CRM Products</label>
</ListView>